save before proofreading

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -89,7 +89,7 @@ Previously I&rsquo;ve worked as a machine learning engineer (LeadiQ 2020-2023), 
 <p>I&rsquo;m primarily interesting in the field of AI alignment - I&rsquo;ve cowrote a paper on <a href="https://arxiv.org/abs/2403.05518">reducing biased reasoning in language models</a>.</p>
 <p>I also enjoy making typesafe python packages such as <a href="https://github.com/thejaminator/slist">Slist</a> on the side.</p>
 <p><a href="https://github.com/thejaminator">My Github</a></p>
-<p>You can also reach me at chuajamessh &lt; dot &gt; gmail</p>
+<p>You can reach me at chuajamessh &lt; dot &gt; gmail</p>
 
     </div>
 </div>
