--- a/public/about/index.html
+++ b/public/about/index.html
@@ -99,7 +99,7 @@ Previously I&rsquo;ve worked as a machine learning engineer (LeadiQ 2020-2023), 
 I enjoy making typesafe python packages such as <a href="https://github.com/thejaminator/slist">Slist</a> on the side.</p>
 <p>My research</p>
 <ul>
-<li><a href="https://arxiv.org/abs/2410.13787">Looking Inward: Language Models Can Learn About Themselves by Introspection</a></li>
+<li><a href="https://modelintrospection.com">Looking Inward: Language Models Can Learn About Themselves by Introspection</a></li>
 <li><a href="https://arxiv.org/abs/2403.05518">Bias-Augmented Consistency Training Reduces Biased Reasoning in Chain-of-Thought</a></li>
 </ul>
 <p>In progress</p>
@@ -107,7 +107,7 @@ I enjoy making typesafe python packages such as <a href="https://github.com/thej
 <li>Language Models Can Articulate Their Implicit Goals</li>
 </ul>
 <p>Links:</p>
-<p><a href="https://github.com/thejaminator">Google Scholar</a> | <a href="https://scholar.google.com/citations?user=tv6Se-gAAAAJ&amp;hl=en">Github</a> | chuajamessh &lt; dot &gt; gmail.</p>
+<p><a href="https://scholar.google.com/citations?user=tv6Se-gAAAAJ&amp;hl=en">Google Scholar</a> | <a href="https://github.com/thejaminator">Github</a> | chuajamessh &lt; dot &gt; gmail.</p>
 
     </div>
 </div>
