add more papers

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -97,14 +97,13 @@ About James Chua | James Chua
 <p>Hi! Currently I&rsquo;m working as an alignment researcher at <a href="https://owainevans.github.io">Owain Evans&rsquo; org</a>.
 Previously I&rsquo;ve worked as a machine learning engineer (LeadiQ 2020-2023), and as a MATS 2023 scholar under <a href="https://ethanperez.net">Ethan Perez</a>.
 I enjoy making typesafe python packages such as <a href="https://github.com/thejaminator/slist">Slist</a> on the side.</p>
-<p>My research</p>
+<p>My research (Latest at the top)</p>
 <ul>
+<li><a href="https://arxiv.org/abs/2501.08156">Inference-Time-Compute: More Faithful? A Research Note</a></li>
+<li><a href="https://arxiv.org/abs/2501.11120">Tell me about yourself: LLMs are aware of their learned behaviors</a></li>
 <li><a href="https://modelintrospection.com">Looking Inward: Language Models Can Learn About Themselves by Introspection</a></li>
+<li><a href="https://arxiv.org/abs/2407.15211">Failures to Find Transferable Image Jailbreaks Between Vision-Language Models</a></li>
 <li><a href="https://arxiv.org/abs/2403.05518">Bias-Augmented Consistency Training Reduces Biased Reasoning in Chain-of-Thought</a></li>
-</ul>
-<p>In progress</p>
-<ul>
-<li>Language Models Can Articulate Their Implicit Goals</li>
 </ul>
 <p>Links:</p>
 <p><a href="https://scholar.google.com/citations?user=tv6Se-gAAAAJ&amp;hl=en">Google Scholar</a> | <a href="https://github.com/thejaminator">Github</a> | chuajamessh &lt; dot &gt; gmail.</p>
@@ -119,7 +118,7 @@ I enjoy making typesafe python packages such as <a href="https://github.com/thej
         <footer class="footer">
     
         <span>
-            © 2024 James Chua, Built with
+            © 2025 James Chua, Built with
             <a href="https://gohugo.io" class="footerLink">Hugo</a> and
             <a href="https://github.com/LordMathis/hugo-theme-nightfall" class="footerLink">Nightfall</a> theme
         </span>
