--- a/public/about/index.html
+++ b/public/about/index.html
@@ -112,7 +112,7 @@ I enjoy making typesafe python packages such as <a href="https://github.com/thej
     </div>
     <div class="paper-content" style="flex: 1; padding-top: 5px;">
         <p style="margin-top: 0;"><a href="https://arxiv.org/abs/2501.08156" class="paper-title">Inference-Time-Compute: More Faithful? A Research Note</a></p>
-        <p class="authors">**James Chua**, Owain Evans</p>
+        <p class="authors"><b>James Chua</b>, Owain Evans</p>
         <p class="venue"></p>
     </div>
 </div> 
@@ -130,7 +130,7 @@ I enjoy making typesafe python packages such as <a href="https://github.com/thej
     </div>
     <div class="paper-content" style="flex: 1; padding-top: 5px;">
         <p style="margin-top: 0;"><a href="https://arxiv.org/abs/2501.11120" class="paper-title">Tell me about yourself: LLMs are aware of their learned behaviors</a></p>
-        <p class="authors">Jan Betley, Xuchan Bao, Martín Soto, Anna Sztyber-Betley, **James Chua**, Owain Evans</p>
+        <p class="authors">Jan Betley, Xuchan Bao, Martín Soto, Anna Sztyber-Betley, <b>James Chua</b>, Owain Evans</p>
         <p class="venue"></p>
     </div>
 </div> 
@@ -148,7 +148,7 @@ I enjoy making typesafe python packages such as <a href="https://github.com/thej
     </div>
     <div class="paper-content" style="flex: 1; padding-top: 5px;">
         <p style="margin-top: 0;"><a href="https://modelintrospection.com" class="paper-title">Looking Inward: Language Models Can Learn About Themselves by Introspection</a></p>
-        <p class="authors">Felix J Binder, **James Chua**, Tomek Korbak, Henry Sleight, John Hughes, Robert Long, Ethan Perez, Miles Turpin, Owain Evans</p>
+        <p class="authors">Felix J Binder, <b>James Chua</b>, Tomek Korbak, Henry Sleight, John Hughes, Robert Long, Ethan Perez, Miles Turpin, Owain Evans</p>
         <p class="venue"></p>
     </div>
 </div> 
@@ -166,7 +166,7 @@ I enjoy making typesafe python packages such as <a href="https://github.com/thej
     </div>
     <div class="paper-content" style="flex: 1; padding-top: 5px;">
         <p style="margin-top: 0;"><a href="https://arxiv.org/abs/2407.15211" class="paper-title">Failures to Find Transferable Image Jailbreaks Between Vision-Language Models</a></p>
-        <p class="authors">Rylan Schaeffer, Dan Valentine, Luke Bailey, **James Chua**, Cristóbal Eyzaguirre, Zane Durante, Joe Benton, Brando Miranda, Henry Sleight, John Hughes, Rajashree Agrawal, Mrinank Sharma, Scott Emmons, Sanmi Koyejo, Ethan Perez</p>
+        <p class="authors">Rylan Schaeffer, Dan Valentine, Luke Bailey, <b>James Chua</b>, Cristóbal Eyzaguirre, Zane Durante, Joe Benton, Brando Miranda, Henry Sleight, John Hughes, Rajashree Agrawal, Mrinank Sharma, Scott Emmons, Sanmi Koyejo, Ethan Perez</p>
         <p class="venue"></p>
     </div>
 </div> 
@@ -184,7 +184,7 @@ I enjoy making typesafe python packages such as <a href="https://github.com/thej
     </div>
     <div class="paper-content" style="flex: 1; padding-top: 5px;">
         <p style="margin-top: 0;"><a href="https://arxiv.org/abs/2403.05518" class="paper-title">Bias-Augmented Consistency Training Reduces Biased Reasoning in Chain-of-Thought</a></p>
-        <p class="authors">James Chua, Edward Rees, Hunar Batra, Samuel R. Bowman, Julian Michael, Ethan Perez, Miles Turpin</p>
+        <p class="authors"><b>James Chua</b>, Edward Rees, Hunar Batra, Samuel R. Bowman, Julian Michael, Ethan Perez, Miles Turpin</p>
         <p class="venue"></p>
     </div>
 </div> 
