--- a/public/about/index.html
+++ b/public/about/index.html
@@ -105,6 +105,14 @@ I enjoy making typesafe python packages such as <a href="https://github.com/thej
 
 
 
+<style>
+@media (max-width: 768px) {
+    .paper-image {
+        flex: 0 0 120px !important;
+    }
+}
+</style>
+
 <div class="paper-card" style="display: flex; gap: 20px; margin-bottom: 20px;">
     <div class="paper-image" style="flex: 0 0 190px;">
         <a href="https://arxiv.org/abs/2501.08156">
@@ -126,6 +134,14 @@ I enjoy making typesafe python packages such as <a href="https://github.com/thej
 
 
 
+
+<style>
+@media (max-width: 768px) {
+    .paper-image {
+        flex: 0 0 120px !important;
+    }
+}
+</style>
 
 <div class="paper-card" style="display: flex; gap: 20px; margin-bottom: 20px;">
     <div class="paper-image" style="flex: 0 0 190px;">
@@ -149,6 +165,14 @@ I enjoy making typesafe python packages such as <a href="https://github.com/thej
 
 
 
+<style>
+@media (max-width: 768px) {
+    .paper-image {
+        flex: 0 0 120px !important;
+    }
+}
+</style>
+
 <div class="paper-card" style="display: flex; gap: 20px; margin-bottom: 20px;">
     <div class="paper-image" style="flex: 0 0 190px;">
         <a href="https://modelintrospection.com">
@@ -170,6 +194,14 @@ I enjoy making typesafe python packages such as <a href="https://github.com/thej
 
 
 
+
+<style>
+@media (max-width: 768px) {
+    .paper-image {
+        flex: 0 0 120px !important;
+    }
+}
+</style>
 
 <div class="paper-card" style="display: flex; gap: 20px; margin-bottom: 20px;">
     <div class="paper-image" style="flex: 0 0 190px;">
@@ -193,6 +225,14 @@ I enjoy making typesafe python packages such as <a href="https://github.com/thej
 
 
 
+<style>
+@media (max-width: 768px) {
+    .paper-image {
+        flex: 0 0 120px !important;
+    }
+}
+</style>
+
 <div class="paper-card" style="display: flex; gap: 20px; margin-bottom: 20px;">
     <div class="paper-image" style="flex: 0 0 190px;">
         <a href="https://arxiv.org/abs/2403.05518">
@@ -215,6 +255,14 @@ I enjoy making typesafe python packages such as <a href="https://github.com/thej
 
 
 
+
+<style>
+@media (max-width: 768px) {
+    .paper-image {
+        flex: 0 0 120px !important;
+    }
+}
+</style>
 
 <div class="paper-card" style="display: flex; gap: 20px; margin-bottom: 20px;">
     <div class="paper-image" style="flex: 0 0 190px;">
