--- a/public/about/index.html
+++ b/public/about/index.html
@@ -92,11 +92,11 @@ About James Chua | James Chua
 <figure><img src="/about/images/me.png" width="200px">
 </figure>
 
-<p>Hi! I&rsquo;m working as an alignment researcher at <a href="https://owainevans.github.io">Owain Evans&rsquo; org</a>.
+<p>Hi! I&rsquo;m working as an alignment researcher at <a href="https://owainevans.github.io">TruthfulAI, a new org in Berkeley headed by Owain Evans.</a>.
 Previously I&rsquo;ve worked as a machine learning engineer (LeadiQ 2020-2023), and as a MATS 2023 scholar under <a href="https://ethanperez.net">Ethan Perez</a>.
 I enjoy making typesafe python packages such as <a href="https://github.com/thejaminator/slist">Slist</a> on the side.</p>
 <h2 id="links">Links</h2>
-<p><a href="https://scholar.google.com/citations?user=tv6Se-gAAAAJ&amp;hl=en">Google Scholar</a> | <a href="https://x.com/jameschua_sg">Twitter</a> | chuajamessh &lt; dot &gt; gmail.</p>
+<p><a href="https://scholar.google.com/citations?user=tv6Se-gAAAAJ&amp;hl=en">Google Scholar</a> | <a href="https://x.com/jameschua_sg">Twitter</a> | chuajamessh &lt; at &gt; gmail.</p>
 <h2 id="my-research">My Research</h2>
 
 
