--- a/public/about/index.html
+++ b/public/about/index.html
@@ -93,8 +93,9 @@ About James Chua | James Chua
 </figure>
 
 <p>Hi! I&rsquo;m working as an alignment researcher at <a href="https://www.truthfulai.org">TruthfulAI, a new org in Berkeley headed by Owain Evans.</a>.
-Previously I&rsquo;ve worked as a machine learning engineer (LeadiQ 2020-2023), and as a MATS 2023 scholar under <a href="https://ethanperez.net">Ethan Perez</a>.
-My current interests are truthfulness and the limits of reasoning.</p>
+Before this, I worked as an Anthropic Contractor as part of the MATS 2023 program under <a href="https://ethanperez.net">Ethan Perez</a>.
+In a previous life, I&rsquo;ve worked as a machine learning engineer (LeadiQ 2020-2023).
+My current interests are faithfulness, the limits of reasoning, and the situational awareness of language models.</p>
 <p>I enjoy making typesafe python packages such as <a href="https://github.com/thejaminator/slist">Slist</a> on the side.</p>
 <h2 id="links">Links</h2>
 <p><a href="https://scholar.google.com/citations?user=tv6Se-gAAAAJ&amp;hl=en">Google Scholar</a> | <a href="https://x.com/jameschua_sg">Twitter</a> | chuajamessh &lt; at &gt; gmail.</p>
