--- a/public/about/index.html
+++ b/public/about/index.html
@@ -98,7 +98,7 @@ In a previous life, I&rsquo;ve worked as a machine learning engineer (LeadiQ 202
 My current interests are faithfulness, the limits of reasoning, and the situational awareness of language models.</p>
 <p>I enjoy making typesafe python packages such as <a href="https://github.com/thejaminator/slist">Slist</a> on the side.</p>
 <h2 id="links">Links</h2>
-<p><a href="https://scholar.google.com/citations?user=tv6Se-gAAAAJ&amp;hl=en">Google Scholar</a> | <a href="https://x.com/jameschua_sg">Twitter</a> | chuajamessh &lt; at &gt; gmail.</p>
+<p><a href="https://scholar.google.com/citations?user=tv6Se-gAAAAJ&amp;hl=en">Google Scholar</a> | <a href="https://x.com/jameschua_sg">Twitter</a> | <a href="https://xiaohongshu.com/user/profile/65d0f7c20000000005032f7d">小红书</a>｜chuajamessh &lt; at &gt; gmail.</p>
 <h2 id="my-research">My Research</h2>
 
 
