--- a/public/about/index.html
+++ b/public/about/index.html
@@ -122,10 +122,10 @@ My current interests are faithfulness, the limits of reasoning, and the situatio
         </a>
     </div>
     <div class="paper-content" style="flex: 1; padding-top: 5px;">
-        <p style="margin-top: 0;"><a href="https://arxiv.org/abs/2501.08156" class="paper-title">Inference-Time-Compute: More Faithful? A Research Note</a></p>
+        <p style="margin-top: 0;"><a href="https://arxiv.org/abs/2501.08156" class="paper-title">Are DeepSeek R1 And Other Reasoning Models More Faithful?</a></p>
         <p class="authors" style="font-size: 0.8em;"><b>James Chua</b>, Owain Evans</p>
         
-        <p class="description" style="font-size: 0.9em;">Inference Time Compute models (Gemini-thinking, QwQ) articulate their cues much more than their traditional counterparts. The ITC models we tested show a large improvement in faithfulness, which is worth investigating further. To speed up this investigation, we release these early results as a research note.</p>
+        <p class="description" style="font-size: 0.9em;">Reasoning models (DeepSeek R1, Gemini-thinking, QwQ) articulate their cues much more than their traditional counterparts. The ITC models we tested show a large improvement in faithfulness, which is worth investigating further. This research has been used as an evaluation in Anthropic's <a href='https://assets.anthropic.com/m/785e231869ea8b3b/original/claude-3-7-sonnet-system-card.pdf'>Claude 3.7 Model Card</a> and their paper on <a href='https://assets.anthropic.com/m/71876fabef0f0ed4/original/reasoning_models_paper.pdf'>Chain-of-Thought faithfulness</a>.</p>
         
         <p class="venue"></p>
     </div>
