fix jenny's name

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -213,7 +213,7 @@ My current interests are faithfulness, the limits of reasoning, and the situatio
     </div>
     <div class="paper-content" style="flex: 1; padding-top: 5px;">
         <p style="margin-top: 0;"><a href="https://arxiv.org/abs/2501.11120" class="paper-title">Tell me about yourself: LLMs are aware of their learned behaviors</a></p>
-        <p class="authors" style="font-size: 0.8em;">Jan Betley, XuchMan Bao, Martín Soto, Anna Sztyber-Betley, <b>James Chua</b>, Owain Evans</p>
+        <p class="authors" style="font-size: 0.8em;">Jan Betley, Xuchan Bao, Martín Soto, Anna Sztyber-Betley, <b>James Chua</b>, Owain Evans</p>
         
         <p class="description" style="font-size: 0.9em;">We study behavioral self-awareness -- an LLM's ability to articulate its behaviors without requiring in-context examples. Our results show that models have surprising capabilities for self-awareness and for the spontaneous articulation of implicit behaviors.</p>
         
