--- a/public/about/index.html
+++ b/public/about/index.html
@@ -94,8 +94,9 @@ About James Chua | James Chua
 
 <p>Hi! I&rsquo;m working as an alignment researcher at <a href="https://www.truthfulai.org">TruthfulAI, a new org in Berkeley headed by Owain Evans.</a>.
 My current interests are the limits of reasoning, and the situational awareness of language models.</p>
-<p>Recently, I&rsquo;ve also worked on the faithfulness and explainability of language models.
-You can see <a href="https://arxiv.org/abs/2501.08156">my work</a> used in Anthropic&rsquo;s <a href="https://assets.anthropic.com/m/785e231869ea8b3b/original/claude-3-7-sonnet-system-card.pdf">Claude 3.7 Model Card</a> and their paper on <a href="https://assets.anthropic.com/m/71876fabef0f0ed4/original/reasoning_models_paper.pdf">Chain-of-Thought faithfulness</a>. I researched faithfulness as an Anthropic contractor under <a href="https://ethanperez.net">Ethan Perez</a>, during my MATS program.</p>
+<p>I&rsquo;ve also worked on the faithfulness and explainability of language models.
+You can see <a href="https://arxiv.org/abs/2501.08156">my work</a> used in Anthropic&rsquo;s <a href="https://assets.anthropic.com/m/785e231869ea8b3b/original/claude-3-7-sonnet-system-card.pdf">Claude 3.7 Model Card</a> and their paper on <a href="https://assets.anthropic.com/m/71876fabef0f0ed4/original/reasoning_models_paper.pdf">Chain-of-Thought faithfulness</a>. I researched faithfulness as an Anthropic mentee under <a href="https://ethanperez.net">Ethan Perez</a>, during MATS.</p>
+<p>Recently (Oct 2025), DeepMind also found that my method for improving the consistency of models works well to reduce <a href="https://www.arxiv.org/abs/2510.27062">jailbreaks and sycophancy.</a></p>
 <p>Before my work on AI Safety, I&rsquo;ve worked as a machine learning engineer (LeadiQ 2020-2023).
 I enjoy making typesafe python packages such as <a href="https://github.com/thejaminator/slist">Slist</a> on the side.</p>
 <h2 id="links">Links</h2>
